package Main.Order.Place;

public enum Residue {;
    public static final int DUST = 0;
    public static final int MUD = 1;
}
