package Main.Order.Task.Shine;


public enum Surface {;
    public static final int FLOOR = 0;
    public static final int FURNITURE = 1;
}